# drama-smallville

./: .gitignore  AGENTS.md  CONTEXT.md  PRD.md  open-project-url.bat
script simulation/backend/: README.md  __init__.py  main.py  pyproject.toml  requirements.txt  sample_request.json
script simulation/backend/agents/: audience_agents.py  base.py  creative_advisors.py  judge.py  screenwriter.py  script_doctor.py  story_parser.py
script simulation/backend/agents_md/: audience_emotion.md  audience_paid_unlock.md  audience_shuangwen.md  creative_continuity.md  creative_pacing.md  critic.md  judge.md  platform_distribution.md  report_agent.md  story_parser.md  writer.md
script simulation/backend/api/: drama_routes.py  memory_routes.py  population_routes.py  trace_routes.py
script simulation/backend/config/: audience_research.json  settings.py
script simulation/backend/llm/: gateway.py  script_mind_client.py
script simulation/backend/memory/: memory_store.py
script simulation/backend/population/: compressor.py  distribution_loader.py  profile_builder.py  sampler.py  validator.py
script simulation/backend/schemas/: audience_distribution.py  calibration.py  creative_review.py  draft.py  evidence.py  judgment.py  message.py  population.py  project.py  quality.py  report.py  trace.py  world_state.py
script simulation/backend/services/: demo_runner.py
script simulation/backend/simulation/: agent_profile.py  light_simulator.py  quality_evaluator.py  story_environment.py
script simulation/backend/static/: index.html
script simulation/backend/tests/: test_api.py  (+3 more)
(+34 files in other folders)
